fix for close button misalignment when you have more than 1 plot

--- a/bokehjs/src/less/bokeh.less
+++ b/bokehjs/src/less/bokeh.less
@@ -172,3 +172,6 @@ button.active {border:1px solid blue}
     margin-top: 10px;
     margin-bottom: 10px;
 }
+.jsp{
+    overflow : hidden;
+}
